[package]
name = "cuda-platonic"
version = "0.1.0"
edition = "2021"
description = "Platonic forms — archetypes, measurement, ideal evolution"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-platonic"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
